Solved distorted UI

--- a/src/main/webapp/resources/grayscale/css/sb-admin.css
+++ b/src/main/webapp/resources/grayscale/css/sb-admin.css
@@ -37,7 +37,7 @@ td {
 }
 
 #page-wrapper {
-    width: 70%;
+    width: 90%;
     padding: 0;
     background-color: white;
 }
